# gpsocketconnectionplugin

./: .gitignore  CMakeLists.txt  README.md  flake.nix  test.py
src/: CMakeLists.txt  gpsocketconnectionplugin.c  gpsocketconnectionplugin.h  util.c  util.h
test/: test.py
